Ya no funciona la web :(

--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/index.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+<li>Ir a <a href="ejercicioidenlaces.html">ejercicioenlaces.</a></li>
 <h1>This is a heading</h1>
 <p>This <strong>is a paragraph </strong>.</p>
 <img src="mar.jpg" width=400/> 
