--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/grupalAJA/Ejegrupal.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/grupalAJA/Ejegrupal.html
@@ -119,8 +119,9 @@
             ¡Compra tus entradas ahora y sé parte de esta celebración histórica! 🌠✨<br><br>
             No importa de dónde vengas, si eres humano o extraterrestre, en la Fiesta del Orgullo Interespecie LGTBIQ+ hay un lugar especial para ti. ¡Nos vemos en la pista de baile bajo las estrellas!<br><br>
             Ensalzando la diversidad, promoviendo la paz. ¡Únete a la revolución interestelar!<br><br>
-            [Enlace para comprar entradas]<br><br>
+    
             ¡No te lo pierdas! 🌌❤️🛸
+            <br><br><button onclick="window.location.href = 'otra_pagina.html';" class="form-btn">¡Compra aqui tus entradas!</button>
         </p>
         <h2 class="title2">Miembros del grupo</h2>
         <ul class="list-group">
@@ -147,7 +148,7 @@
             <input type="submit" value="Enviar" class="form-btn">
             </form>
             <!-- Botón para redireccionar a otra página -->
-            <br><br><button onclick="window.location.href = 'otra_pagina.html';" class="form-btn">Ir a Otra Página</button>
+            
             </div>
   </body>
 </html>
