--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/grupalAJA/Ejegrupal.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/grupalAJA/Ejegrupal.html
@@ -86,6 +86,21 @@
         .hidden {
             display: none;
         }
+        .form-btn {
+            font-size: 20px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background: linear-gradient(90deg, green, rgb(195, 219, 73));
+            color: rgb(255, 255, 255);
+            transition: background 0.3s ease;
+        }
+
+        .form-btn:hover {
+            background: linear-gradient(90deg, rgb(195, 219, 73), green);
+        }
     </style>
     <script>
         function toggleForm() {
@@ -100,7 +115,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title"><img src="lgbt.png" alt="Rainbow Flag" style="height: 40px; vertical-align: middle;"> Proyecto Grupal</h1>
+        <h1 class="title"><img src="lgbt.png" alt="Rainbow Flag" style="height: 40px; vertical-align: middle;"> ORGULLO ESPACIAL</h1>
         <p> 
         <p>
             ¡Atención a todos los seres de la galaxia, tanto humanos como extraterrestres! 🌈✨<br><br>
