ejercicio parque casi acabado

--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/parquenatural/index.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/parquenatural/index.html
@@ -8,19 +8,20 @@
   </head>
   <body>
     <div class="container">
+      <img src="/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/parquenatural/imagenes/panoramica.jpg" alt="ImagenPanoramica">
       <h1 class="texto">
         <span class="colortit1">Parque Natural</span>
         <span class="colortit2">Sierra Bicuerca</span>
       </h1>
       <div class="content">
         <div class="menu">
-            <ul>
-              <li><a href="index.html" class="button">Inicio</a></li>
-              <li><a href="especies.html" class="button">Especies</a></li>
-              <li><a href="" class="button">Reservas</a></li>
-              <li><a href="" class="button">Galería</a></li>
-            </ul>
-          </div>
+          <ul>
+            <li><a href="index.html" class="button inicio">Inicio</a></li>
+            <li><a href="especies.html" class="button verde">Especies</a></li>
+            <li><a href="#" class="button verde">Reservas</a></li>
+            <li><a href="#" class="button verde">Galería</a></li>
+          </ul>
+        </div>
         <div class="marcointerno">
           <h2>Bienvenidos al Parque Natural</h2>
           <p>
