--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/ej01.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/ej01.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Secciones y líneas generales de un documento HTML5.</title>
     <style>
-        h1.color {
+        h1 {
           color: rgb(0, 67, 108);
         }
-        h2.color {
+        h2 {
             color: rgb(3, 92, 147);
+        }
+        body {
+          background-color: rgb(151, 197, 237);
         }
       </style>
   </head>
-  <body style="background-color: rgb(151, 197, 237);">
+  <body>
     <h1 class="color">Texto para el ejercicio</h1>
-    <h2 class="color">Secciones y lineas generales de un documento HTML <sub>5</sub></h2>
+    <h2>Secciones y lineas generales de un documento HTML <sub>5</sub></h2>
     <p>
       La especificación HTML, trae muchos nuevos elementos a los desarrolladores
       web, permitiéndoles describir la estructura de un documento web con
       semántica estandarizada. Este documento describe estos elementos y cómo
       usarlos para definir el perfil de cualquier documento.
     </p>
-    <h2 class="color">Problemas resueltos por HTML <sub>5</sub></h2>
+    <h2>Problemas resueltos por HTML <sub>5</sub></h2>
     <p>
       La definición de la estructura de un documento en HTML4 y su algoritmo de
       perfilado es muy tosco y genera numerosos problemas
