--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/ej02.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/UD26_IntroduccionHTMLCSS/TA26 - HTMLCSS/ej02.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <title>Párrafo con imágenes</title>
     <style>
-      h1.color {
+      h1 {
         font-size: xx-large;
         font-family: Arial, Helvetica, sans-serif;
         color: white;
       }
-      p.color {
+      p {
         font-size: x-large;
         font-family: Arial, Helvetica, sans-serif;
         color: white;
@@ -20,9 +20,9 @@
   </head>
 
   <body style="background-color: black">
-    <h1 class="color">Beyoncé</h1>
+    <h1>Beyoncé</h1>
 
-    <p class="color">Reina de <strong>gays</strong> y <em>negras</em>.</p>
+    <p>Reina de <strong>gays</strong> y <em>negras</em>.</p>
     
 
     <img src="beyonce.jpg" width="800" alt="Beyonce-Renaissance Act I" />
