--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej16_diferencias.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej16_diferencias.html
@@ -31,7 +31,7 @@
       .backamarillo {
         background-color: rgb(249, 249, 165);
       }
-      td {
+      .fondohuellitas {
         background-image: url(huellas.jpg);
         background-size: 100%;
         
