--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej17_imagenes.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej17_imagenes.html
@@ -9,7 +9,7 @@
         border-spacing: 40px;
         background-size: cover;
         table-layout: fixed;
-        background-image: url(/recursos/ac.jpg);
+        background-image: url(recursos/ac.jpg);
       }
 
       tr,
@@ -22,13 +22,14 @@
         background-color: white;
       }
 
-<<<<<<< HEAD
+
       tr.mantel td {
         background-image: url(/TA27-Tablas_DIV/recursos/back_mantel.jpg);
-=======
+      }
+
       #A, #B, #C, #D{
         background-image: url(recursos/back_mantel.jpg);
->>>>>>> 9390fd685ec9f83fef9f7999b57682c5b1801971
+
       }
 
       #B {
