--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej16_diferencias.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/TA27-Tablas_DIV/ej16_diferencias.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <style>
       table {
-        width: 100%;
         border-collapse: separate;
         border-spacing: 1px;
         background-color: rgb(235, 235, 155);
@@ -17,7 +16,6 @@
         border: 1px solid black;
         padding: 3px;
         text-align: center;
-        background-color: white;
       }
 
       .backverde {
@@ -33,8 +31,7 @@
       }
       .fondohuellitas {
         background-image: url(huellas.jpg);
-        background-size: 100%;
-        
+        background-size: cover;
       }
     </style>
   </head>
@@ -54,23 +51,24 @@
         <th class="backamarillo">PEQUEÑO</th>
         <th class="backamarillo">GRANDE</th>
       </tr>
-
-      <tr>
-        <td class="backrows">Duración de crecimiento</td>
-        <td>10 meses</td>
-        <td>18 a 24 meses</td>
-        <td>16 años</td>
-      </tr>
-      <tr>
-        <td>Tiempo de gestación</td>
-        <td colspan="2">58 a 63 días</td>
-        <td>9 meses</td>
-      </tr>
-      <tr>
-        <td>Duración de vida del pelo/cabello</td>
-        <td colspan="2">1 año</td>
-        <td>2 a 7 años</td>
-      </tr>
+      <tbody class="fondohuellitas">
+        <tr>
+          <td class="backrows">Duración de crecimiento</td>
+          <td>10 meses</td>
+          <td>18 a 24 meses</td>
+          <td>16 años</td>
+        </tr>
+        <tr>
+          <td>Tiempo de gestación</td>
+          <td colspan="2">58 a 63 días</td>
+          <td>9 meses</td>
+        </tr>
+        <tr>
+          <td>Duración de vida del pelo/cabello</td>
+          <td colspan="2">1 año</td>
+          <td>2 a 7 años</td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
