ej4 bootstrap acabado

--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/BOOTSTRAP/ej04.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/BOOTSTRAP/ej04.html
@@ -95,7 +95,55 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="mt-4 p-5 bg-secondary text-white">
+        <h1>Articulo destacado de la semana</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+          iste non beatae repellat repellendus consectetur est voluptatem. Iste
+          excepturi tempora quis, quasi molestias error ratione animi ad
+          aliquid, natus debitis?
+        </p>
+        <button class="btn btn-primary" type="button">
+          <a href="#" class="text-white text-decoration-none">Leer más</a>
+        </button>
+      </div>
+      <div class="row p-5">
+        <div class="col">
+          <h3>Titulo del articulo</h3>
+          <img src="https://placehold.co/200x150" alt="placeholder" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima at
+            ex officia neque ipsa, adipisci laborum.
+          </p>
+          <button class="btn btn-success" type="button">
+            <a href="#" class="text-white text-decoration-none">Leer más</a>
+          </button>
+        </div>
+        <div class="col">
+          <h3>Titulo del articulo</h3>
+          <img src="https://placehold.co/200x150" alt="placeholder" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima at
+            ex officia neque ipsa, adipisci laborum.
+          </p>
+          <button class="btn btn-success" type="button">
+            <a href="#" class="text-white text-decoration-none">Leer más</a>
+          </button>
+        </div>
+        <div class="col">
+          <h3>Titulo del articulo</h3>
+          <img src="https://placehold.co/200x150" alt="placeholder" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima at
+            ex officia neque ipsa, adipisci laborum.
+          </p>
+          <button class="btn btn-success" type="button">
+            <a href="#" class="text-white text-decoration-none">Leer más</a>
+          </button>
+        </div>
+      </div>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
