--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/BOOTSTRAP/ej04.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/BOOTSTRAP/ej04.html
@@ -16,6 +16,11 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <style>
+      p {
+        text-align: justify;
+      }
+    </style>
   </head>
 
   <body>
@@ -96,7 +101,7 @@
       </nav>
     </header>
     <main>
-      <div class="mt-4 p-5 bg-secondary text-white">
+      <div class="mt-4 p-5 bg-secondary text-white ">
         <h1>Articulo destacado de la semana</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
